@@ -2,9 +2,6 @@
 -Xmx8g
 -XX:MetaspaceSize=256m
 -XX:MaxMetaspaceSize=512m
--XX:+UseCompactObjectHeaders
--XX:+UseZGC
--XX:+UseStringDeduplication
 -XX:+TieredCompilation
 -XX:TieredStopAtLevel=4
 -XX:CompileThreshold=10000
